@@ -7,6 +7,7 @@
 -- artist.addTags
 -- artist.removeTag
 -- event.attend
+-- playlist.addTrack
 -- track.addTags
 -- track.ban
 -- track.love
